--- a/index.html
+++ b/index.html
@@ -12,49 +12,47 @@
 <body>
     <section class="hero is-link">
         <div class="hero-body">
-            <p class="title has-text-centered is-1">
+            <p class="title has-text-centered is-2">
                 Weather Dashboard
             </p>
         </div>
     </section>
 
     <div class="columns is-vcentered">
-        <div class="column is-one-quarter">
-            <form class="box">
+        <div class="column is-one-quarter ml-3">
+            <form id="city-form">
                 <div class="field">
-                    <label class="label ">Search for a City:</label>
+                    <label class="label title is-5">Search for a City:</label>
                     <div class="control">
-                    <input class="input" type="city" id="city-name" placeholder="San Diego"> 
+                    <input class="input" id="city-text" placeholder="San Diego"> 
                     </div>
                 </div>
-            <button class="button is-link is-focused">Submit</button>
+            <button class="button is-link is-focused" id="submit">Submit</button>
             </form>
-            <div id="history"></div>
+            <hr>
+            <ul id="city-history"></ul>
         </div>
 
-        <div class="column">
+        <div class="column mr-5">
             <div class="box mt-4" id="current-weather">
                 <h1>City:</h1>
             </div>
 
-            <br>
-
-            <h2>5-Day Forecast</h2>
-            <br>
+            <h2 class="title is-5">5-Day Forecast</h2>
                 <div class="columns" id="forecasts">
-                    <div class="column is-2 box">
+                    <div class="box column">
                         1
                     </div>
-                    <div class="column is-2 box">
+                    <div class="box column">
                         2
                     </div>
-                    <div class="column is-2 box">
+                    <div class="box column">
                         3
                     </div>            
-                    <div class="column is-2 box">
+                    <div class="box column">
                         4
                     </div>            
-                    <div class="column is-2 box">
+                    <div class="box column">
                         5
                     </div>
                 </div>
