--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <section class="hero is-link">
+    <section class="hero is-link is-small">
         <div class="hero-body">
             <p class="title has-text-centered is-2">
                 Weather Dashboard
@@ -18,10 +18,11 @@
         </div>
     </section>
 
-    <div class="columns is-vcentered">
-        <div class="column is-one-quarter ml-3">
+    <div class="columns" style="height: 100%">
+        <div class="column is-one-fifth ml-3">
             <form id="city-form">
                 <div class="field">
+                    <br>
                     <label class="label title is-5">Search for a City:</label>
                     <div class="control">
                     <input class="input" id="city-text" placeholder="San Diego"> 
@@ -39,21 +40,31 @@
             </div>
 
             <h2 class="title is-5">5-Day Forecast</h2>
-                <div class="columns" id="forecasts">
-                    <div class="box column">
-                        1
+                <div class="tile is-ancestor" id="forecasts">
+                    <div class="tile is-parent">
+                        <div class="tile is-child box">
+                            1
+                        </div>
                     </div>
-                    <div class="box column">
-                        2
-                    </div>
-                    <div class="box column">
-                        3
-                    </div>            
-                    <div class="box column">
-                        4
-                    </div>            
-                    <div class="box column">
-                        5
+                    <div class="tile is-parent">
+                        <div class="tile is-child box">
+                            2
+                        </div>
+                    </div>                    
+                    <div class="tile is-parent">
+                        <div class="tile is-child box">
+                            3
+                        </div>
+                    </div>                    
+                    <div class="tile is-parent">
+                        <div class="tile is-child box">
+                            4
+                        </div>
+                    </div>                    
+                    <div class="tile is-parent">
+                        <div class="tile is-child box">
+                            5
+                        </div>
                     </div>
                 </div>
         </div>
