created functioning API

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </section>
 
     <div class="columns" style="height: 100%">
-        <div class="column is-one-fifth ml-3">
+        <div class="column is-2 ml-3">
             <form id="city-form">
                 <div class="field">
                     <br>
@@ -29,15 +29,14 @@
                     </div>
                 </div>
             <button class="button is-link is-focused" id="submit">Submit</button>
+            <button class="button is-link is-focused" id="clear">Clear history</button>
             </form>
             <hr>
             <ul id="city-history"></ul>
         </div>
 
         <div class="column mr-5">
-            <div class="box mt-4" id="current-weather">
-                <h1>City:</h1>
-            </div>
+            <div id="currentContainer"></div>
 
             <h2 class="title is-5">5-Day Forecast</h2>
                 <div class="tile is-ancestor" id="forecasts">
