created forecast day 1

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                     <input class="input" id="city-text" placeholder="San Diego"> 
                     </div>
                 </div>
-            <button class="button is-link is-focused" id="submit">Submit</button>
-            <button class="button is-link is-focused" id="clear">Clear history</button>
+            <button class="button is-link is-focused mt-2" id="submit">Submit</button>
+            <button class="button is-link is-focused mt-2" id="clear">Clear history</button>
             </form>
             <hr>
             <ul id="city-history"></ul>
@@ -54,7 +54,7 @@
                 <div class="tile is-parent">
                     <div class="tile is-child box has-text-white has-background-link" id="day-one">
                         <p id="day-one-date"></p>
-                        <p id="day-one-icon"></p>
+                        <img id="day-one-icon">
                         <p id="day-one-temp"></p>
                         <p id="day-one-wind"></p>
                         <p id="day-one-humidity"></p>
