--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div id="currentContainer">
                 <div class="box">
                     <h1 id="currentCityName"></h1> 
-                        <div id="currentIcon"></div>
+                    <img id="currentIcon">
                     <p id="currentDate"></p>
                     <p id="currentTemp"></p>
                     <p id="currentWindSp"></p>
@@ -63,7 +63,7 @@
                 <div class="tile is-parent">
                     <div class="tile is-child box has-text-white has-background-link" id="day-2">
                         <p id="day-two-date"></p>
-                        <p id="day-two-icon"></p>
+                        <img id="day-two-icon">
                         <p id="day-two-temp"></p>
                         <p id="day-two-wind"></p>
                         <p id="day-two-humidity"></p>
@@ -72,7 +72,7 @@
                 <div class="tile is-parent">
                     <div class="tile is-child box has-text-white has-background-link" id="day-3">
                         <p id="day-three-date"></p>
-                        <p id="day-three-icon"></p>
+                        <img id="day-three-icon">
                         <p id="day-three-temp"></p>
                         <p id="day-three-wind"></p>
                         <p id="day-three-humidity"></p>
@@ -81,7 +81,7 @@
                 <div class="tile is-parent">
                     <div class="tile is-child box has-text-white has-background-link" id="day-4">
                         <p id="day-four-date"></p>
-                        <p id="day-four-icon"></p>
+                        <img id="day-four-icon">
                         <p id="day-four-temp"></p>
                         <p id="day-four-wind"></p>
                         <p id="day-four-humidity"></p>
@@ -90,7 +90,7 @@
                 <div class="tile is-parent">
                     <div class="tile is-child box has-text-white has-background-link" id="day-5">
                         <p id="day-five-date"></p>
-                        <p id="day-five-icon"></p>
+                        <img id="day-five-icon">
                         <p id="day-five-temp"></p>
                         <p id="day-five-wind"></p>
                         <p id="day-five-humidity"></p>
