edited README and CSS

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="column mr-5">
             <div id="currentContainer">
                 <div class="box">
-                    <h1 id="currentCityName"></h1> 
+                    <h1 id="currentCityName" class="title is-3"></h1> 
                     <img id="currentIcon">
                     <p id="currentDate"></p>
                     <p id="currentTemp"></p>
@@ -49,11 +49,11 @@
             </div>
 
         <br>
-        <h2 class="title is-5">5-Day Forecast</h2>
+        <h2 class="title is-3">5-Day Forecast</h2>
             <div class="tile is-ancestor" id="forecasts">
                 <div class="tile is-parent">
                     <div class="tile is-child box has-text-white has-background-link" id="day-one">
-                        <p id="day-one-date"></p>
+                        <p id="day-one-date" class="title is-4 has-text-white"></p>
                         <img id="day-one-icon">
                         <p id="day-one-temp"></p>
                         <p id="day-one-wind"></p>
@@ -62,7 +62,7 @@
                 </div>
                 <div class="tile is-parent">
                     <div class="tile is-child box has-text-white has-background-link" id="day-2">
-                        <p id="day-two-date"></p>
+                        <p id="day-two-date" class="title is-4 has-text-white"></p>
                         <img id="day-two-icon">
                         <p id="day-two-temp"></p>
                         <p id="day-two-wind"></p>
@@ -71,7 +71,7 @@
                 </div>                    
                 <div class="tile is-parent">
                     <div class="tile is-child box has-text-white has-background-link" id="day-3">
-                        <p id="day-three-date"></p>
+                        <p id="day-three-date" class="title is-4 has-text-white"></p>
                         <img id="day-three-icon">
                         <p id="day-three-temp"></p>
                         <p id="day-three-wind"></p>
@@ -80,7 +80,7 @@
                 </div>                    
                 <div class="tile is-parent">
                     <div class="tile is-child box has-text-white has-background-link" id="day-4">
-                        <p id="day-four-date"></p>
+                        <p id="day-four-date" class="title is-4  has-text-white"></p>
                         <img id="day-four-icon">
                         <p id="day-four-temp"></p>
                         <p id="day-four-wind"></p>
@@ -89,7 +89,7 @@
                 </div>                    
                 <div class="tile is-parent">
                     <div class="tile is-child box has-text-white has-background-link" id="day-5">
-                        <p id="day-five-date"></p>
+                        <p id="day-five-date" class="title is-4 has-text-white"></p>
                         <img id="day-five-icon">
                         <p id="day-five-temp"></p>
                         <p id="day-five-wind"></p>
